extra spacing issue fix

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9962,6 +9962,7 @@ body.home-page main {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    padding-bottom: 5px;
   }
 
   .image-large {
@@ -13667,7 +13668,6 @@ body.home-page main {
   .vcn-difference-section,
   .gut-stats-main-section,
   .comparison-table-main-section,
-  .strains-info-main-section,
   .reviews-section {
     padding-left: 15px !important;
     padding-right: 15px !important;
@@ -13675,4 +13675,7 @@ body.home-page main {
   .health-section-bg {
     padding-bottom: 0 !important;
   }
+  .strains-info-main-section{
+      padding-left:25px !important;
+    }
 }
